# LightBar

./: .gitignore  .gitmodules  CMakeLists.txt  environment.env
LightBar/: Animation.cpp  Animation.h  CMakeLists.txt  ILedMatrix.h  LedMatrix.cpp  LedMatrix.h  LightBar.cpp  LightBar.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  main.cpp
LightBar/media/: tickers.json
StockUtil/: CMakeLists.txt  Stock.cpp  Stock.h  stock_data_getter.py
test/: CMakeLists.txt  LedMatrixTest.cpp  StockTests.cpp
test/LightBarTests/: CMakeLists.txt  LightBarTests.cpp
test/LightBarTests/Mocks/: MockILedMatrixView.h  MockStock.h
